tests/NormalTests/paczka1/fuzzy1/88081378.err
Error in line 17: vxYTviMp A78 2,9
Error in line 14: x6fZ A28 83,3
Error in line 20: x6fZ A78 58,4
Error in line 21: x6fZ A268 42,1
Error in line 16: A28 A403 20,1
Error in line 25: DWZ3gGX6R A78 24,3
Error in line 23: A28 A28 34,8
Error in line 19: fRcNNJSkoy A28 36,7
Error in line 35: x6fZ A403 27,0
